# mlflow_showcase

./: .env.example  .gitignore  .pre-commit-config.yaml  MLFLOW_KEYNOTE_QUICK_REFERENCE.md  README.md  coverage.json  expectationmlflow.md  feedbackmlflow.md  pyproject.toml  redactmlflow.md
data/chroma_db/: chroma.sqlite3
data/evaluation/: rag_results.csv  tax_law_qa.csv
docs/: RAGAS_COMPLETE_GUIDE.md
docs/adr/: 001-mlflow-observability-choice.md
docs/guides/: 01-basics-tracking.md  02-tracing-deep-dive.md  03-evaluation-framework.md  04-rag-implementation.md
docs/llm-evaluation-comparison/: README.md  framework-comparison-table.md  weighted-evaluation-matrix.md
docs/security/: api-key-management.md
promptfoo_results/: factuality.json  prevent_hallucination.json  rag_pipeline.json  temperature_sweep.json
promptfoo_results/redteam/: guardrails.json  jailbreaking.json  prompt_injection.json  rag_security.json
scripts/: run_examples.py
src/: __init__.py  config.py
src/advanced/: README.md  evaluate_baselines.py  evaluate_llm_judge.py  prompt_registry_example.py  prompt_registry_simple.py  show_prompt_registry.py  tracing_quickstart.py
src/basics/: README.md  langchain_integration.py  langchain_tracing.py  metrics_helpers.py  mlflow_tracking.py  mlflow_utils.py  model_logging.py  tracing_decorators.py  tracing_nested_example.py  zhipu_client.py  zhipu_completions.py
src/garak_evaluation/: __init__.py
src/promptfoo_evaluation/: README.md  __init__.py
src/promptfoo_results/: cost_latency.json  javascript_asserts.json  python_asserts.json
src/ragas_evaluation/: README.md  __init__.py
tests/: conftest.py  test_config.py
tests/advanced/: test_rag.py
tests/basics/: test_mlflow_utils.py  test_tracing_decorators.py  (+1 more)
(+174 files in other folders)
